{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 49,
  "lineage": "4258924a-9e53-bbd9-6da5-03ab7b57d642",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "vm_external_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "europe-west2",
          "schema_version": 0,
          "attributes": {
            "address": "35.189.121.236",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-02-23T06:00:56.499-08:00",
            "id": "projects/sylvan-earth-317512/regions/europe-west2/addresses/vm-external-ip-europe-west2",
            "name": "vm-external-ip-europe-west2",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "sylvan-earth-317512",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sylvan-earth-317512/regions/europe-west2/addresses/vm-external-ip-europe-west2"
          }
        },
        {
          "index_key": "europe-west3",
          "schema_version": 0,
          "attributes": {
            "address": "35.198.125.58",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-02-23T06:00:56.479-08:00",
            "id": "projects/sylvan-earth-317512/regions/europe-west3/addresses/vm-external-ip-europe-west3",
            "name": "vm-external-ip-europe-west3",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "sylvan-earth-317512",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sylvan-earth-317512/regions/europe-west3/addresses/vm-external-ip-europe-west3"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "vm_internal_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "europe-west2",
          "schema_version": 0,
          "attributes": {
            "address": "10.0.16.2",
            "address_type": "INTERNAL",
            "creation_timestamp": "2024-02-23T06:01:40.176-08:00",
            "id": "projects/sylvan-earth-317512/regions/europe-west2/addresses/vm-internal-ip-europe-west2",
            "name": "vm-internal-ip-europe-west2",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "sylvan-earth-317512",
            "purpose": "GCE_ENDPOINT",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sylvan-earth-317512/regions/europe-west2/addresses/vm-internal-ip-europe-west2",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/sylvan-earth-317512/regions/europe-west2/subnetworks/my-subnet-europe-west2"
          },
          "dependencies": [
            "google_compute_network.my_vpc",
            "google_compute_subnetwork.my_subnet"
          ]
        },
        {
          "index_key": "europe-west3",
          "schema_version": 0,
          "attributes": {
            "address": "10.0.0.2",
            "address_type": "INTERNAL",
            "creation_timestamp": "2024-02-23T06:01:40.199-08:00",
            "id": "projects/sylvan-earth-317512/regions/europe-west3/addresses/vm-internal-ip-europe-west3",
            "name": "vm-internal-ip-europe-west3",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "sylvan-earth-317512",
            "purpose": "GCE_ENDPOINT",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sylvan-earth-317512/regions/europe-west3/addresses/vm-internal-ip-europe-west3",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/sylvan-earth-317512/regions/europe-west3/subnetworks/my-subnet-europe-west3"
          },
          "dependencies": [
            "google_compute_network.my_vpc",
            "google_compute_subnetwork.my_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "europe-west2",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-02-23T06:01:18.447-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sylvan-earth-317512/global/firewalls/allow-http-europe-west2",
            "log_config": [],
            "name": "allow-http-europe-west2",
            "network": "https://www.googleapis.com/compute/v1/projects/sylvan-earth-317512/global/networks/my-vpc-europe-west2",
            "priority": 1000,
            "project": "sylvan-earth-317512",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sylvan-earth-317512/global/firewalls/allow-http-europe-west2",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "pre-prod",
              "prod"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.my_vpc"
          ]
        },
        {
          "index_key": "europe-west3",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-02-23T06:01:18.318-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sylvan-earth-317512/global/firewalls/allow-http-europe-west3",
            "log_config": [],
            "name": "allow-http-europe-west3",
            "network": "https://www.googleapis.com/compute/v1/projects/sylvan-earth-317512/global/networks/my-vpc-europe-west3",
            "priority": 1000,
            "project": "sylvan-earth-317512",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sylvan-earth-317512/global/firewalls/allow-http-europe-west3",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "pre-prod",
              "prod"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "europe-west2",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-02-23T06:01:18.402-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sylvan-earth-317512/global/firewalls/allow-https-europe-west2",
            "log_config": [],
            "name": "allow-https-europe-west2",
            "network": "https://www.googleapis.com/compute/v1/projects/sylvan-earth-317512/global/networks/my-vpc-europe-west2",
            "priority": 1000,
            "project": "sylvan-earth-317512",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sylvan-earth-317512/global/firewalls/allow-https-europe-west2",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "pre-prod",
              "prod"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.my_vpc"
          ]
        },
        {
          "index_key": "europe-west3",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-02-23T06:01:18.307-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sylvan-earth-317512/global/firewalls/allow-https-europe-west3",
            "log_config": [],
            "name": "allow-https-europe-west3",
            "network": "https://www.googleapis.com/compute/v1/projects/sylvan-earth-317512/global/networks/my-vpc-europe-west3",
            "priority": 1000,
            "project": "sylvan-earth-317512",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sylvan-earth-317512/global/firewalls/allow-https-europe-west3",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "pre-prod",
              "prod"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "europe-west2",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240209",
                    "size": 250,
                    "type": "pd-ssd"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/sylvan-earth-317512/zones/europe-west2-a/disks/vm-e2-medium-europe-west2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/sylvan-earth-317512/zones/europe-west2-a/instances/vm-e2-medium-europe-west2",
            "instance_id": "6538072479820486378",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "enable-oslogin": "TRUE"
            },
            "metadata_fingerprint": "88dXhj3KRqM=",
            "name": "vm-e2-medium-europe-west2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.189.121.236",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/sylvan-earth-317512/global/networks/my-vpc-europe-west2",
                "network_ip": "10.0.16.2",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/sylvan-earth-317512/regions/europe-west2/subnetworks/my-subnet-europe-west2",
                "subnetwork_project": "sylvan-earth-317512"
              }
            ],
            "project": "sylvan-earth-317512",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/sylvan-earth-317512/zones/europe-west2-a/instances/vm-e2-medium-europe-west2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": true,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "pre-prod",
              "prod"
            ],
            "tags_fingerprint": "EuCKm7Inhuk=",
            "zone": "europe-west2-a"
          },
          "dependencies": [
            "data.google_compute_zones.available",
            "google_compute_address.vm_external_ip",
            "google_compute_address.vm_internal_ip",
            "google_compute_network.my_vpc",
            "google_compute_subnetwork.my_subnet"
          ]
        },
        {
          "index_key": "europe-west3",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240209",
                    "size": 250,
                    "type": "pd-ssd"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/sylvan-earth-317512/zones/europe-west3-a/disks/vm-e2-medium-europe-west3"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/sylvan-earth-317512/zones/europe-west3-a/instances/vm-e2-medium-europe-west3",
            "instance_id": "1803111631458473706",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "enable-oslogin": "TRUE"
            },
            "metadata_fingerprint": "88dXhj3KRqM=",
            "name": "vm-e2-medium-europe-west3",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.198.125.58",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/sylvan-earth-317512/global/networks/my-vpc-europe-west3",
                "network_ip": "10.0.0.2",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/sylvan-earth-317512/regions/europe-west3/subnetworks/my-subnet-europe-west3",
                "subnetwork_project": "sylvan-earth-317512"
              }
            ],
            "project": "sylvan-earth-317512",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/sylvan-earth-317512/zones/europe-west3-a/instances/vm-e2-medium-europe-west3",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": true,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "pre-prod",
              "prod"
            ],
            "tags_fingerprint": "EuCKm7Inhuk=",
            "zone": "europe-west3-a"
          },
          "dependencies": [
            "data.google_compute_zones.available",
            "google_compute_address.vm_external_ip",
            "google_compute_address.vm_internal_ip",
            "google_compute_network.my_vpc",
            "google_compute_subnetwork.my_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "europe-west2",
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/sylvan-earth-317512/global/networks/my-vpc-europe-west2",
            "mtu": 0,
            "name": "my-vpc-europe-west2",
            "project": "sylvan-earth-317512",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sylvan-earth-317512/global/networks/my-vpc-europe-west2"
          }
        },
        {
          "index_key": "europe-west3",
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/sylvan-earth-317512/global/networks/my-vpc-europe-west3",
            "mtu": 0,
            "name": "my-vpc-europe-west3",
            "project": "sylvan-earth-317512",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sylvan-earth-317512/global/networks/my-vpc-europe-west3"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "my_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "europe-west2",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-02-23T06:01:18.876-08:00",
            "gateway_address": "10.0.16.1",
            "id": "projects/sylvan-earth-317512/regions/europe-west2/subnetworks/my-subnet-europe-west2",
            "ip_cidr_range": "10.0.16.0/20",
            "name": "my-subnet-europe-west2",
            "network": "https://www.googleapis.com/compute/v1/projects/sylvan-earth-317512/global/networks/my-vpc-europe-west2",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "sylvan-earth-317512",
            "purpose": "PRIVATE",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sylvan-earth-317512/regions/europe-west2/subnetworks/my-subnet-europe-west2",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.my_vpc"
          ]
        },
        {
          "index_key": "europe-west3",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-02-23T06:01:18.932-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/sylvan-earth-317512/regions/europe-west3/subnetworks/my-subnet-europe-west3",
            "ip_cidr_range": "10.0.0.0/20",
            "name": "my-subnet-europe-west3",
            "network": "https://www.googleapis.com/compute/v1/projects/sylvan-earth-317512/global/networks/my-vpc-europe-west3",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "sylvan-earth-317512",
            "purpose": "PRIVATE",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sylvan-earth-317512/regions/europe-west3/subnetworks/my-subnet-europe-west3",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.my_vpc"
          ]
        }
      ]
    }
  ]
}